# retail_chain

./: .env_sample  README.md  Retail Chain API.postman_collection.json  pyproject.toml
config/: settings.py  urls.py
suppliers/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
suppliers/fixtures/: sample_products.json  sample_suppliers.json
suppliers/management/commands/: add_test_data.py
suppliers/migrations/: 0001_initial.py
users/: admin.py  models.py  urls.py
users/management/commands/: create_test_users.py  csu.py
users/migrations/: 0001_initial.py
